--- a/pranshus-portfolio/src/App.css
+++ b/pranshus-portfolio/src/App.css
@@ -102,7 +102,7 @@ div.introduction{
     width: 100%!important;
   }
 
-  div.introdcution{
+  div.introduction{
     height: 100%!important;
   }
 }
