--- a/pranshus-portfolio/src/App.css
+++ b/pranshus-portfolio/src/App.css
@@ -3,111 +3,69 @@ html,body {
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  overflow-x: hidden;
-  min-height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Raleway', 'Poppins',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-h1,h2,h3,h4,h5,h6{
-  font-family: Raleway;
-}
+/* Custom Scrollbar */
+body::-webkit-scrollbar{width:0.25rem}
+body::-webkit-scrollbar-track{background:#182848}
+body::-webkit-scrollbar-thumb{background:#3d5794}
 
-.sidebar{
-  /*background: rgb(10,139,129);
-  background: linear-gradient(60deg, rgba(10,139,129,0.9) 0%, rgba(4,196,204,0.9) 35%, rgba(0,141,195,0.9) 100%);*/
-  background-color: #8EC5FC;
-  background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-  color: #fff!important;
-  overflow-y: auto;
-  height: 100%;
-  position: fixed;
-  font-family: poppins;
-}
-
-.main{
-  position: absolute;
-  right: 0;
-}
-
-.overlay{
-  width: 100%;
-  height: 100%;
-  background: rgb(0,0,0,0.3);
-}
-
-.sidebar-image img{
-  border-radius: 50%;
-  object-fit: cover;
-}
-
-.sidebar h3{
-  font-family: Poppins;
-}
-
-a.links{
-  color: #fff;
-  text-decoration: none;
-  position: relative;
-}
-
-a.links:before{
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: currentColor;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.3s ease-in-out;
-}
-
-a.links:hover:before{
-  visibility: visible;
-  transform: scaleX(1);
-}
-
-.sections ul{
-  padding: 0;
-  list-style: none;
-}
-
-div.introduction{
+/* Background */
+div.App{
   background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
+  background-size: cover;
 }
 
-.introduction{
-  color: #fff;
-  height: 100vh;
+/* Navbar animation */
+@keyframes appear {
+  0% {opacity: 0;}
+  50% {opacity: 0;}
+  100% {opacity: 1;}
+}
+@keyframes slide {
+  from {margin-left: -5rem;}
+  to {margin-left: 0.5rem;}
+}
+nav li span{display: none; animation: appear 0.3s ease;}
+
+
+nav li svg{min-width: 2rem; min-height: auto;}
+
+@media screen and (min-width: 1024px){
+  nav{transition: 0.25s ease all}
+  nav svg.animate-rotation{
+    transform:rotate(0);
+    transition: 0.3s ease-in-out all;
+  }
+  nav:hover svg.animate-rotation{
+    transform:rotate(180deg);
+    transition: 0.35s ease-in-out all;
+  }
+
+  nav:hover{
+    width: 12rem;
+    transition: 0.3s ease all;
+  }
+  nav:hover li span{display: block; animation: appear 0.3s ease;}
+  nav:hover li span:first-child{animation: slide 0.35s ease;}
 }
 
-.gray-text{
-  color: #696969;
-  font-family: poppins;
-  font-size: 16px;
-}
+nav li a{transition: 0.05s ease all}
+nav li a:hover{transition: 0.05s ease all}
 
-@media screen and (max-width: 768px){
-  .main{
-    position: static;
-  }
-  .sidebar{
-    display: none;
-  }
+/* Custom Gradients */
+.bg-salt{background-image: linear-gradient(160deg, #3d5794, #182848)}
 
-  div.overlay{
-    width: 100%!important;
-  }
-
-  div.introduction{
-    height: 100%!important;
-  }
-
-  div.intro-text{
-    margin-top: 30px;
-    text-align: center!important;
-  }
+/* Profile Picture */
+img.profile-img{
+  width: 70%;
+  height: auto;
+  max-width: 300px;
+  max-height: 300px;
 }
